# ATS

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/templates/accounts/: login.html  register.html
applicants/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
applicants/management/commands/: load_sample_data.py
applicants/migrations/: 0001_initial.py  0002_alter_applicant_unique_together.py
applicants/templates/applicants/: applicant_confirm_delete.html  applicant_detail.html  applicant_list.html  apply.html  success.html
ats_project/: asgi.py  settings.py  urls.py  wsgi.py
jobs/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
jobs/templates/jobs/: dashboard.html  job_confirm_delete.html  job_detail.html  job_form.html  job_list.html
static/css/: style.css
static/js/: main.js
templates/: base.html
