[project]
name = "ats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "gunicorn==23.0.0",
    "whitenoise==6.11.0",
    "Pillow>=11.0.0",
    "PyPDF2==3.0.1",
    "dj-database-url==3.0.1",
    "google-generativeai>=0.8.0",
]
